# Path-planner

./: README.md
Path_planner/: Contentsoverview.txt
Path_planner/.github/: architect.md  developer.md  explainer.md  instructions.md  reviewer.md
Path_planner/MATLAB FILES-PATHPLANNER/: InPolygon.mexw64  Motionprimitives_acado.cpp  Motionprimitives_acado.m  Obstaclemap.m  Obstaclemap.mat  Pathplanning_Astar.m  Plot_pathgenerated.m  check.m  closed_check.m  g_cost.m  h_cost.m  loop_checkfinal.m  open_check.m  rectheur.m  rectheur1.m  staticobs_check.m  virtualobs_check.m  virtualobsreverse_check.m
Path_planner/Motion primitives library/: Add_MP_toworkspace.m  MP_plotfile.m  time.mat
Path_planner/SIMULINK-PATHPLANNER/: DPDscenario.m  Path_planning_run.m  boundingbox.m  boundingbox_AV.m  check3_dyn.m  checkfinal_dyn.m  checkpathplaning.m  checksimobs.slx  checksimobs.slx.original  checksimobs.slxc  closed_checkCopy.m  g_costCopy.m  h_costnewslx.m  loop_checkfinalslx.m  movingobstacledetection.m  obstacleavoidance.mat  obstacleavoidancefinal.mat  open_checkCopy.m  pathplanning_checkcopy.slx  pathplanning_checkcopy.slxc  pathplanning_checkcopy2020a.slx  ppround_1.m  rectheur1slx.m  rectheurslx.m  staticobs_checkCopy.m  virtualforobs_checkslx.m  virtualobsreverse_checkCopy.m
Path_planner_modular/: ModelConstants.mat  kinematic_model.slx
Path_planner_modular/+Obstacle_Map/: ObstacleMap.m  updateObstacleMap.m
Path_planner_modular/+motion_primitives/: addstraightprimitives.m  create_ip_params.m  generateInitialPrimitives.m  mp_add_mat.m
Path_planner_modular/+planner/: global_planner.m
Path_planner_modular/+utilities/: create_basic_constants.m  create_bus_elements.m  create_model_buses.m  create_model_mat.m  create_motion_primitive_state.m  create_motion_primitive_struct.m  create_search_tree.m
Path_planner_modular/+vehicle/: create_angle_result.m  create_databus_result.m  create_pos_result.m  (+3 more)
Python_ROS2_AD/: CATALYST_ARCHITECTURE.md  MATLAB_CONVERSION_COMPLETE.md  PRODUCTION_SUMMARY.md  README.md  test_astar_simple.py  test_astar_standalone.py  test_enhanced_astar.py  workspace_setup.md
Python_ROS2_AD/src/catalyst_core/: package.xml  setup.cfg  setup.py
Python_ROS2_AD/src/catalyst_core/catalyst_core/: __init__.py  base_plugin.py  configuration_manager.py  platform_manager.py  plugin_registry.py
Python_ROS2_AD/src/catalyst_core/resource/: catalyst_core
Python_ROS2_AD/src/catalyst_interfaces/: CMakeLists.txt  package.xml
Python_ROS2_AD/src/catalyst_interfaces/msg/: AlgorithmConfig.msg  MotionPrimitive.msg  ObstacleMap.msg  PathPlan.msg  PluginStatus.msg  VehicleState.msg
Python_ROS2_AD/src/catalyst_interfaces/srv/: LoadPlugin.srv  PlanPath.srv
Python_ROS2_AD/src/catalyst_launch/: package.xml
Python_ROS2_AD/src/catalyst_launch/launch/: catalyst_system.launch.py
Refactoring_MATLAB_AD/: BEHAVIORAL_INTEGRATION.md  README.md  SIMULATION_STOP_GUIDE.md  SIMULINK_INTEGRATION.md  WORKING_FLOW.md  bus_structure_demo.m  check_goal_reached_bus.m  create_tolerance_config.m  create_vehicle_bus_structures.m  create_vehicle_config.m  create_vehicle_state.m  help_check.slx  integration_example.m  main_demo.m  simple_goal_check_demo.m  simulation_stop_demo.m
(+9085 files in other folders)
